--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -1,5 +1,5 @@
 .home-container {
-  background-image: url("./bg-images/blackFriday.jpg");
+  background-image: url("./bg-images/Company-bg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
