--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   height: 100vh;
+  width: 30%;
+  margin: auto;
 }
 .login-container h1{
   font-size: 40px;
@@ -20,4 +21,25 @@ h3 {
 .login-form-container {
   display: flex;
   flex-direction: column;
+}
+
+/* ====MEDIA QUERY STARTS HERE==== */
+@media (max-width: 1324px) {
+
+}
+
+@media (max-width: 1024px) {
+  .login-container {
+  width: 50%;
+  }
+}
+
+@media (max-width: 834px) {
+   
+}
+
+@media (max-width: 480px) {
+  .login-container {
+  width: 80%;
+  } 
 }
