--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--white-color);
+  background-color: var(--sky-blue);
   padding-top: 15px;
 }
 .header-container div {
